--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   "license": "MIT",
   "dependencies": {
     "seek-bzip": "^2.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.19.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
