--- a/package.json
+++ b/package.json
@@ -1,12 +1,28 @@
 {
-  "name": "nexrad-radar-data",
-  "version": "0.2.0",
+  "name": "nexrad-level-2-data",
+  "version": "1.0.0",
   "description": "Decode Nexrad Level II radar archive files",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
-  "author": "Matt Johnston",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/netbymatt/nexrad-level-2-data.git"
+	},
+		"bugs": {
+			"url": "https://github.com/netbymatt/nexrad-level-2-data/issues"
+		},
+		"homepage": "https://github.com/netbymatt/nexrad-level-2-data#readme",
+	"keywords": [
+		"NEXRAD",
+		"level",
+		"2",
+		"radar",
+		"data",
+		"parsing"
+	],
+  "author": "Matt Walsh",
   "license": "MIT",
   "dependencies": {
     "seek-bzip": "^2.0.0"
@@ -15,5 +31,8 @@
     "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1"
-  }
+  },
+	"engines": {
+		"node": ">=13.0.0"
+	}
 }
