--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,16 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
+			"name": "Test-Error",
+			"program": "${workspaceFolder}/test-error.js",
+			"request": "launch",
+			"skipFiles": [
+				"<node_internals>/**"
+			],
+			"type": "pwa-node",
+			// "outputCapture": "all",
+		},
+		{
 			"name": "Decompress",
 			"program": "${workspaceFolder}/test-decompress.js",
 			"request": "launch",
@@ -21,7 +31,7 @@
 			"skipFiles": [
 				"<node_internals>/**"
 			],
-			"program": "${workspaceFolder}\\test.js"
+			"program": "${workspaceFolder}/test.js"
 		}
 	]
 }
