--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
 			"skipFiles": [
 				"<node_internals>/**"
 			],
-			"type": "pwa-node",
+			"type": "node",
 			// "outputCapture": "all",
 		},
 		{
@@ -21,7 +21,7 @@
 			"skipFiles": [
 				"<node_internals>/**"
 			],
-			"type": "pwa-node",
+			"type": "node",
 			// "outputCapture": "all",
 		},
 		{
@@ -31,7 +31,7 @@
 			"skipFiles": [
 				"<node_internals>/**"
 			],
-			"type": "pwa-node",
+			"type": "node",
 			// "outputCapture": "all",
 		},
 		{
